--- a/blog/scss/__media.scss
+++ b/blog/scss/__media.scss
@@ -233,3 +233,103 @@
         flex-direction: row;
     }
 }
+
+@media(max-width: 660px){
+    body .offer-form{
+        width: 550px;
+        justify-content: center;
+        justify-items: center;
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+    }
+
+    body .offer-subtext{
+        left: 20px;
+        position: relative;
+    }
+}
+
+@media(max-width: 550px){
+     body .offer-form{
+        width: 450px;
+    }
+
+    body .offer-text{
+        left: 20px;
+        position: relative;
+    }
+}
+
+@media(max-width: 480px){
+       body .offer-form{
+        width: 350px;
+    }
+
+    body .offer-text{
+        left: 20px;
+        position: relative;
+    }
+
+    .offer-form input{
+        width: 300px;
+    }
+
+    .offer-verify{
+        width: 290px;
+        // left: 20px;
+        position: relative;
+    }
+
+    body .offer-submit-btn{
+        width: 280px;
+    }
+    
+    body .offer{
+        height: 700px;
+    }
+
+    .mark-sections div{
+        width: 290px;
+        margin: 0;
+        padding: 0;
+        justify-content: center;
+        align-items: center;
+    }
+
+    body .mark-sections{
+        width: 290px;
+    }
+
+    .mark-left-side div{
+        justify-items: center;
+    }
+
+    .mark-left-side img{
+        justify-content: center;
+    }
+}
+
+@media(max-width: 550px){
+    body .contract-product-block{
+        width: 300px;
+    }
+
+    body .offer-form{
+        width: 300px;
+    }
+
+    body .offer-subtext{
+        width: 300px;
+        text-align: left;
+    }
+    .offer-form input{
+        width: 200px;
+    }
+}
+
+@media(max-width: 360px){
+    #hero-navig{
+        width: 80px;
+    }
+}
