--- a/blog/scss/__media.scss
+++ b/blog/scss/__media.scss
@@ -20,7 +20,7 @@
 }
 @media(max-width: 590px){
     .hero-navigation{
-        width: 160px;
+        width: 100px;
     }
 
     #hero-phone{
@@ -205,7 +205,7 @@
 
 @media(max-width: 600px){
     body .blog-left-side{
-        width: 400px;
+        width: 280px;
         height: 250px;
     }
     body .blog-left-text{
@@ -218,7 +218,7 @@
 
 @media(max-width: 600px){
     body .blog-right-side{
-        width: 400px;
+        width: 280px;
         height: 250px;
     }
     body .blog-right-text{
@@ -256,7 +256,7 @@
     }
 
     body .offer-text{
-        left: 20px;
+        text-align: center;
         position: relative;
     }
 }
@@ -267,7 +267,6 @@
     }
 
     body .offer-text{
-        left: 20px;
         position: relative;
     }
 
@@ -327,9 +326,8 @@
         width: 200px;
     }
 }
-
 @media(max-width: 360px){
-    #hero-navig{
-        width: 80px;
+    body .offer-text{
+        width: 20px;
     }
 }
